--- a/src/resources/model_simulate_page_v2.html
+++ b/src/resources/model_simulate_page_v2.html
@@ -150,12 +150,14 @@
             <div id="model_layers_vis_tab_caption" style="text-align: center;background: rgba(238,238,238,1.00);border: solid 1px #D6D6D6;width: 460px;margin-left: 180px;"><font style="font-family: SourceHanSansCN-Medium;
               font-size: 14px;
               color: #666666;">统计计数</font></div>
-            <table id="spike_out_count_table" style="margin-left: 180px;border: solid 3px #D6D6D6;color: #333;width: 460px;">
-                <tr id="out_labels" style="border: solid 2px #D6D6D6;">
-                </tr>
-                <tr id="out_counts_tr" style="border: solid 2px #D6D6D6;">
-                </tr>
-            </table>
+              <div style="width: 460px;overflow: auto;margin-left: 180px;">
+                <table id="spike_out_count_table" style="border: solid 3px #D6D6D6;color: #333;width: 460px;">
+                  <tr id="out_labels" style="border: solid 2px #D6D6D6;">
+                  </tr>
+                  <tr id="out_counts_tr" style="border: solid 2px #D6D6D6;">
+                  </tr>
+                </table>
+              </div>
             <div id="spike_charts" style="width: 660px;height: 320px;margin-left: 70px;display: inline-block;"></div>
             <ul id="sample_imgs_ul" style="height: 90px;width: 660px;overflow: auto; white-space: nowrap;display: block;margin-left: 80px;margin-top: 0px;z-index: 2;">
             </ul>
