--- a/src/resources/convertor_page_v2.html
+++ b/src/resources/convertor_page_v2.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>模型转换器</title>
-  <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
-  <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="http://localhost:6003/css/bootstrap337.min.css">
+  <script src="http://localhost:6003/js/jquery211.min.js"></script>
+  <script src="http://localhost:6003/js/bootstrap337.min.js"></script>
 </head>
 <body class="dark-mode" style="height: 100%;width: 100%;overflow: hidden;">
 
