change of general page ui

--- a/src/resources/convertor_page_v2.html
+++ b/src/resources/convertor_page_v2.html
@@ -220,10 +220,11 @@ line-height: 14px;">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true" style="color: rgb(0, 0, 0);margin-right: 30px;">
           &times;
         </button>
-        <h4 id="myModalLabelImportFiles" style="font-family: SourceHanSansCN-Medium;
-        font-size: 20px;
+        <h4 id="myModalLabelImportFiles" style="font-family: SourceHanSansCN-Normal;
+        font-size: 24px;
+        font-weight: bold;
         color: #333333;
-        letter-spacing: 0.89px;">
+        letter-spacing: 1.07px;margin-left: 20px;">
           导入文件
         </h4>
       </div>
@@ -231,13 +232,13 @@ line-height: 14px;">
                 <form role="form" id="project_info_form_import_files">
                   <div style="margin-top: 20px;margin-left: 100px;">
                     <label for="import_files_xnorm"><font  style="font-family: SourceHanSansCN-Normal;
-                      font-size: 20px;
+                      font-size: 22px;
                       color: #333333;
-                      letter-spacing: 1.14px;font-weight: normal;">训练数据: </font></label>
+                      letter-spacing: 1.26px;padding-right: 5px;text-align: right;width: 200px;">训练数据: </font></label>
                     <input type="text" id="import_files_xnorm" style="background: #FFFFFF;
                     border: 1px solid #C0C0C0;
                     border-radius: 6px;
-                    border-radius: 6px;">
+                    border-radius: 6px;margin-left: 5px;">
                     <button id="span_import_xnorm" type="button" class="btn btn-default" style="background-image: linear-gradient(180deg, #AED77C 0%, #8FB740 100%);
                     border-radius: 6px;
                     border-radius: 6px;"><span style="font-family: SourceHanSansCN-Medium;
@@ -248,13 +249,13 @@ letter-spacing: 1.14px;">浏览...</span></button>
 
                   <div style="margin-top: 20px;margin-left: 100px;">
                     <label for="import_files_xtest"><font  style="font-family: SourceHanSansCN-Normal;
-                      font-size: 20px;
+                      font-size: 22px;
                       color: #333333;
-                      letter-spacing: 1.14px;font-weight: normal;">测试数据: </font></label>
+                      letter-spacing: 1.26px;padding-right: 5px;text-align: right;width: 200px;">测试数据: </font></label>
                     <input type="text" id="import_files_xtest" style="background: #FFFFFF;
                     border: 1px solid #C0C0C0;
                     border-radius: 6px;
-                    border-radius: 6px;">
+                    border-radius: 6px;margin-left: 5px;">
                     <button id="span_import_xtest" type="button" class="btn btn-default" style="background-image: linear-gradient(180deg, #AED77C 0%, #8FB740 100%);
                     border-radius: 6px;
                     border-radius: 6px;"><span style="font-family: SourceHanSansCN-Medium;
@@ -265,9 +266,9 @@ letter-spacing: 1.14px;">浏览...</span></button>
 
                   <div style="margin-top: 20px;margin-left: 60px;">
                     <label for="import_files_ytest"><font  style="font-family: SourceHanSansCN-Normal;
-                      font-size: 20px;
+                      font-size: 22px;
                       color: #333333;
-                      letter-spacing: 1.14px;font-weight: normal;">测试数据标签: </font></label>
+                      letter-spacing: 1.26px;padding-right: 5px;text-align: right;width: 200px;">测试数据标签: </font></label>
                     <input type="text" id="import_files_ytest" style="background: #FFFFFF;
                     border: 1px solid #C0C0C0;
                     border-radius: 6px;
@@ -282,9 +283,9 @@ letter-spacing: 1.14px;">浏览...</span></button>
 
                   <div style="margin-top: 20px;margin-left: 95px;">
                     <label for="import_files_ann"><font  style="font-family: SourceHanSansCN-Normal;
-                      font-size: 20px;
+                      font-size: 22px;
                       color: #333333;
-                      letter-spacing: 1.14px;font-weight: normal;">ANN模型: </font></label>
+                      letter-spacing: 1.26px;padding-right: 5px;text-align: right;width: 200px;">ANN模型: </font></label>
                     <input type="text" id="import_files_ann" style="background: #FFFFFF;
                     border: 1px solid #C0C0C0;
                     border-radius: 6px;
