--- a/src/resources/convertor_page_v2.html
+++ b/src/resources/convertor_page_v2.html
@@ -517,6 +517,7 @@ function modal_show_error_dialog_hide() {
             // if (data.is_error) {
             //     $("#myModalLabel_show_error").text("错误提示");
             // }
+            $("#myModalLabel_show_error").text("警告");
             modal_show_error_dialog_show();
             console.log("modal aleret_modal_btn click 错误提示。。。。")
           }
