add support for set fname of binary compiled files

--- a/src/resources/convertor_page_v2.html
+++ b/src/resources/convertor_page_v2.html
@@ -215,8 +215,8 @@ line-height: 14px;">
 <!--导入数据与模型文件-->
 <div class="modal fade" id="myModalImportFiles" tabindex="-1" role="dialog" aria-labelledby="myModalLabelImportFiles" aria-hidden="true" style="background-color: white;color: #333;">
   <div class="modal-dialog" style="background-color: white;width: 800px;">
-    <div class="modal-content" style="background-color: white;">
-      <div style="background: #EEEEEE;padding: 15px;">
+    <div class="modal-content" style="background-color: white;border-radius: 15px;">
+      <div style="background: #EEEEEE;padding: 15px; height: 60px; border-top-right-radius: 15px; border-top-left-radius: 15px;">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true" style="color: rgb(0, 0, 0);margin-right: 30px;">
           &times;
         </button>
