--- a/src/resources/snn_model_page.html
+++ b/src/resources/snn_model_page.html
@@ -34,7 +34,7 @@
         <div id="sangky_chart" style="width: 700px;height: 400px;display: inline-block;margin-left: 50px;overflow-y: auto;overflow-x: hidden;"></div>
       </div>
       <!--权重分布图-->
-      <div style="height: 460px;width: 770px;display: inline-block;vertical-align: top;background: rgba(238,238,238,0.4);">
+      <div style="height: 460px;width: 770px;display: inline-block;vertical-align: top;background: rgba(238,238,238,0.4);margin-left: 6px;">
           <div id="model_layers_vis_tab_caption" style="text-align: center;"><font style="font-family: SourceHanSansCN-Normal;
             font-size: 20px;
             color: #333333;
@@ -51,7 +51,7 @@
       </div>
     </div>
 
-    <div style="height: 400px;margin-top: -25px;">
+    <div style="height: 400px;margin-top: -30px;">
         <!-- SNN神经元信息 -->
         <div style="display: inline-block;background: rgba(238,238,238,0.4); height: 400px;width: 740px;">
             <div id="model_layers_vis_tab_caption" style="text-align: center;"><font style="font-family: SourceHanSansCN-Normal;
@@ -83,7 +83,7 @@
             </table>
         </div>
 
-        <div style="display: inline-block;background: rgba(238,238,238,0.4);height: 400px;width: 750px;">
+        <div style="display: inline-block;background: rgba(238,238,238,0.4);height: 400px;width: 750px;margin-left: 6px;">
           <div style="text-align: center;"><font style="font-family: SourceHanSansCN-Normal;
             font-size: 20px;
             color: #333333;
