fix for compile dialog

--- a/src/resources/model_convertor_page_v3.html
+++ b/src/resources/model_convertor_page_v3.html
@@ -900,6 +900,8 @@ $("#option_label").on("change", (e)=> {
         $("#bin_pack_file_name").prop("disabled", true);
         $("#bin_model_name").css("background", "rgb(209,209,209)");
         $("#bin_pack_file_name").css("background", "rgb(209,209,209)");
+        $("#bin_model_name").val("config.b");
+        $("#bin_pack_file_name").val("packed_bin_files.dat");
     }
 });
 
