--- a/src/resources/model_convertor_page_v3.html
+++ b/src/resources/model_convertor_page_v3.html
@@ -537,6 +537,12 @@
         <div style="margin-top: 10px; width: 500px; height: 100px;">
           <div id="error_detail" for="project_name_projrefac" style="font-family: SourceHanSansCN-Bold;font-size: 28px;color: #666666;letter-spacing: 1.25px; text-align: center;padding-left: 50px;overflow-y: auto;white-space: pre-wrap;height: 100%;width: 95%;">错误信息</div>
         </div>
+                <div>
+                    <button type="button" class="btn btn-primary" style="background-image: linear-gradient(180deg, #ffccaf 0%, #e93434 100%);
+                    border-radius: 100px;
+                    margin-left: 155px;width: 160px;height: 50px; text-align: center;display: none;" id="stp_compile_btn">停止编译
+                    </button>
+                </div>
 			</div>
 			<div style="margin-top: 40px;margin-bottom: 40px;">
 				<button type="button" class="btn btn-primary" style="background-image: linear-gradient(180deg, #AFD1FF 0%, #77A4FF 100%);
@@ -887,6 +893,13 @@ var process_pie_option = {
     }]
 };
 
+$("#stp_compile_btn").on("click", (e) => {
+    vscode.postMessage(JSON.stringify({"stop_compile": "yes"}));
+    console.log("发送停止编译。。。。");
+    $("#alert_modal_btn").click();
+});
+
+
 $("#option_label").on("change", (e)=> {
     console.log("编译二进制文件对话框选项切换");
     let opt_compile = $("#option_label").val();
@@ -923,7 +936,7 @@ function binary_compile_check() {
     console.log("config file name="+config_fname);
     console.log("packed file name="+pack_fname);
     if (config_fname.length === 0 || config_fname.length >= 10) {
-        $("#bin_model_fname_error").text("名称长度为10以内，小写英文字母，.b 后缀");
+        $("#bin_model_fname_error").text("名称长度为9以内，数字小写英文字母，.b 后缀");
         $("#bin_model_fname_error").css("display", "block");
         console.log("bin fname length check failed.");
     } else if (pack_fname.length == 0 || pack_fname.length >= 30) {
@@ -933,7 +946,7 @@ function binary_compile_check() {
     } else {
         for (var i =0; i < config_fname.length - 2;++i) {
             if (!(config_fname[i] >= 'a' && config_fname[i] <= 'z')) {
-                $("#bin_model_fname_error").text("名称长度为10以内，小写英文字母，.b 后缀");
+                $("#bin_model_fname_error").text("名称长度为9以内，数字小写英文字母，.b 后缀");
                 $("#bin_model_fname_error").css("display", "block");
                 console.log("bin model file name check failed.");
                 return;
@@ -1345,6 +1358,9 @@ color: #666666;'>参数缩放系数</td>\
                 document.getElementById("total_progress_ball").style.display = "none";
               } else if (data.show_error)  {
                 $("#error_detail").text(data.show_error);
+                if (data.show_stop_compile) {
+                    $("#stp_compile_btn").css("display", "inline-block");
+                }
                 $("#alert_modal_btn").click();
               } else if (data.preset_param) {
                   console.log("转换界面接收到预设参数.....");
