add taking snapshot after finishing conversion and apply snapshot when importing proj file

--- a/src/resources/model_convertor_page_v3.html
+++ b/src/resources/model_convertor_page_v3.html
@@ -1360,6 +1360,8 @@ color: #666666;'>参数缩放系数</td>\
                 $("#error_detail").text(data.show_error);
                 if (data.show_stop_compile) {
                     $("#stp_compile_btn").css("display", "inline-block");
+                } else {
+                    $("#stp_compile_btn").css("display", "none");
                 }
                 $("#alert_modal_btn").click();
               } else if (data.preset_param) {
