add pack as npz for preprocess files

--- a/src/resources/model_convertor_page_v3.html
+++ b/src/resources/model_convertor_page_v3.html
@@ -1074,6 +1074,7 @@ let s4_fin_stub = 397;
                     process_pie_update(processPie, process_pie_option, Math.min(Math.floor((log_output_lists.length / s4_fin_stub) * 100), 25));                        
                 }
                 if(stage1_convert_finish){
+                    document.getElementById("model_convert_progress_div").style.width = "100%";
                     if(log_output_lists.length < s2_fin_stub && stage2_preprocess_finish !== true){
                         console.log("increase sub progress bar 2");
                             document.getElementById("preprocess_progress_div").style.width = ""+parseInt((log_output_lists.length-s1_fin_stub)/(s2_fin_stub-s1_fin_stub)*100)+"%";
@@ -1081,6 +1082,7 @@ let s4_fin_stub = 397;
                     }
                 }
                 if(stage2_preprocess_finish){
+                    document.getElementById("preprocess_progress_div").style.width = "100%";
                     if(log_output_lists.length < s3_fin_stub && stage3_search_finish !== true){
                         console.log("increase sub progress bar 3");
                             document.getElementById("search_progress_div").style.width = ""+parseInt((log_output_lists.length-s2_fin_stub)/(s3_fin_stub-s2_fin_stub)*100)+"%";
@@ -1088,6 +1090,7 @@ let s4_fin_stub = 397;
                     }
                 }
                 if(stage3_search_finish){
+                    document.getElementById("search_progress_div").style.width = "100%";
                     if(log_output_lists.length < s4_fin_stub && stage4_all_finish !== true){
                         console.log("increase sub progress bar 4");
                             document.getElementById("darlang_progress_div").style.width = ""+parseInt((log_output_lists.length-s3_fin_stub)/(s4_fin_stub-s3_fin_stub)*100)+"%";
